test/e2e/testdata/metric-prometheus.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: metric-prometheus
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /prom
      backendRefs:
        - name: infra-backend-v1
          port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: same-namespace-gw-metrics
  namespace: envoy-gateway-system
spec:
  selector:
    app.kubernetes.io/component: proxy
    app.kubernetes.io/managed-by: envoy-gateway
    app.kubernetes.io/name: envoy
    gateway.envoyproxy.io/owning-gateway-name: same-namespace
    gateway.envoyproxy.io/owning-gateway-namespace: gateway-conformance-infra
  ports:
    - name: metrics
      protocol: TCP
      port: 19001
      targetPort: 19001
  type: LoadBalancer
